fix spacing on smaller screens

--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ input {
     position: absolute;
     right: 0;
     border-color: white;
-    margin-right: 150px;
     margin-top: 20px;
 }
 
